Move the rag example to websockets-next